move insert message box up wrt z-index see MapStory/mapstory/issues/850

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -1,3 +1,6 @@
+.row-editor-msg-box {
+    z-index: 12000 !important;
+}
 .msgbox-button {
     width: 24px;
     height: 24px;
